# ViMax

./: .env  .env.local  COMMIT_DOCUMENTATION.md  Dockerfile  README_SETUP.md  docker-compose.yml  main_idea2video.py  pyproject.toml  web_app.py
configs/: idea2video.yaml
frontend/: .env
frontend/src/: App.css  App.js  LoadingScreen.css  LoadingScreen.js  ModernFileUpload.css  ModernFileUpload.js  PipelineVisualizer.css  PipelineVisualizer.js  ThemeContext.js  ThemeToggle.js  Toast.css  Toast.js  ToastContext.js  VirtualizedList.css  VirtualizedList.js  index.css  index.js  useOptimizedImage.js
pipelines/: idea2video_pipeline.py
tests/: test_web_app.py
tools/: image_generator_nanobanana_google_api.py
